[gd_scene load_steps=3 format=3 uid="uid://cblolnr3x1g8r"]

[ext_resource type="Texture2D" uid="uid://be5yxlfsoxp5y" path="res://art/placeholder/HUD/Arrow.png" id="1_dlxb7"]
[ext_resource type="Script" path="res://shop/night/Display/arrow.gd" id="2_dgmai"]

[node name="Arrow" type="TextureButton"]
texture_filter = 1
custom_minimum_size = Vector2(108, 54)
anchors_preset = -1
pivot_offset = Vector2(105.76, 27)
texture_normal = ExtResource("1_dlxb7")
stretch_mode = 5
script = ExtResource("2_dgmai")

[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
